fix: fix overflow-x

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,9 @@
 @import "./ColorPalete.scss";
 
+.App {
+ overflow-x: hidden;
+}
+
 .banner-home {
     height: 500px;
     background-color: white;
