--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: white;
   overflow-x: hidden;
+  max-width: 100vw;
+  width: 100vw;
 }
 
 code {
